--- a/public/events-edit/index.html
+++ b/public/events-edit/index.html
@@ -271,7 +271,7 @@ body.dark-theme .badge {
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
-      <a href="/spl-blog">SPL Blog</a>
+      <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
     </nav>
     <div id="auth-bar">
