--- a/public/home/index.html
+++ b/public/home/index.html
@@ -286,7 +286,7 @@
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
-      <a href="/spl-blog">SPL Blog</a>
+      <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
     </nav>
@@ -344,7 +344,7 @@
           </div>
         </a>
 
-        <a href="/spl-blog" class="feature-card-link">
+        <a href="/spl" class="feature-card-link">
           <div class="feature-card">
             <div class="feature-badge">Youth Led</div>
             <h3 class="feature-title">SPL Blog</h3>
