--- a/public/spl-blog/index.html
+++ b/public/spl-blog/index.html
@@ -315,7 +315,7 @@
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
-      <a href="/spl-blog">SPL Blog</a>
+      <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
     </nav>
