--- a/public/home/index.html
+++ b/public/home/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8" />
   <title>Troop 248 — Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <header>
-  <button id="theme-toggle" type="button">🌞 Light mode</button>
-</header>
   <style>
     :root {
       --red: #b22222;
@@ -41,6 +38,35 @@
       color: var(--text-main);
       min-height: 100vh;
     }
+    /* Dark theme body */
+body.dark-theme {
+  background: #111827;
+  color: #e5e7eb;
+}
+
+/* Main cards / sections */
+body.dark-theme .welcome-card,
+body.dark-theme section {
+  background: #1f2937;
+  border-color: rgba(55,65,81,.9);
+}
+
+/* Feature cards */
+body.dark-theme .feature-card {
+  background: #111827;
+  border-color: rgba(75,85,99,.9);
+}
+
+/* Text + small labels */
+body.dark-theme .feature-text,
+body.dark-theme .quick-note {
+  color: #d1d5db;
+}
+
+body.dark-theme .badge {
+  background: rgba(55,65,81,.8);
+  color: #e5e7eb;
+}
 
     header {
       background: linear-gradient(120deg, #b22222, #ffffff, #1f4e79);
@@ -292,6 +318,7 @@
     </nav>
 
     <div id="auth-bar">
+      <button id="theme-toggle" type="button">🌞 Light mode</button>
       <div id="auth-info">Signed in as …</div>
       <button id="logout-btn">Log Out</button>
     </div>
