--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -292,7 +292,7 @@ body.dark-theme .badge {
     }
 
     .topic-title {
-      font-weight: 600;
+      font-weight: bold;
       font-size: 14px;
     }
 
