--- a/public/home/index.html
+++ b/public/home/index.html
@@ -105,7 +105,7 @@
           sessionStorage.removeItem("__redirected_to__");
 
           // Go to login page (change path if yours differs)
-          redirectOnce("/login/");
+          redirectOnce("/");
         } catch (e) {
           console.error(e);
           alert("Logout failed. Please try again.");
