--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -367,7 +367,11 @@ body.dark-theme .badge {
     </div>
 
     <section>
+      <h2>Calendar</h2>
       <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=azNscWFqOG12bnZvYmFxdGZzM2E0OWVwZW1sMTBmcGxAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%230b8043&color=%23f4511e" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </section>  
+
+    <section>
       <h2>Manage Events</h2>
       <form id="event-form" class="admin-only">
         <h3>Add Event</h3>
